cabal-version:      2.4
name:               ev-planner-learn-haskell
version:            0.1.0.0

-- A short (one-line) description of the package.
-- synopsis:

-- A longer description of the package.
-- description:

-- A URL where users can report bugs.
-- bug-reports:

-- The license under which the package is released.
-- license:
author:             Ethan Kent
maintainer:         ekent@jd11.law.harvard.edu

-- A copyright notice.
-- copyright:
-- category:
extra-source-files:
    CHANGELOG.md
    README.md

executable ev-planner-learn-haskell
    main-is:          Main.hs

    -- Modules included in this executable, other than Main.
    -- other-modules:

    -- LANGUAGE extensions used by modules in this package.
    -- other-extensions:
    build-depends:    base ^>= 4.17.2.1,
                      dotenv ^>= 0.12.0.0,
                      http-conduit ^>= 2.3.8.3,
                      aeson ^>= 2.2.1.0,
                      text ^>= 2.1.1,
                      bytestring ^>= 0.12.1.0
    hs-source-dirs:   app
    default-language: Haskell2010
